--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name | Portfolio</title>
+    <title>Ansh Goyal | Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -229,7 +229,7 @@
 </section>
 <footer class="footer">
     <p class="thankyou-message">Thank you for visiting! Have a great day ahead!</p>
-    <p>&copy; 2024 Your Name. All Rights Reserved.</p>
+    <p>&copy; 2024 Ansh Goyal. All Rights Reserved.</p>
 </footer>
 
 <script src="script.js"></script>
